# Kshatra

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
models/: collision_predictor_xgb.pkl  collision_predictor_xgboost.pkl
scripts/: balanced_training.py  evaluate_model.py  export_model.py  generate_synthetic.py  generate_training.py  merge_real_and_synthetic.py  plot_class_distribution.py  predict_example.py  predict_from_tle.py  test_propagate.py  test_screening.py  train_model.py
src/data/: tle.py
src/features/: encounter_feature.py
src/propagation/: sgp4_propagator.py
src/screening/: coarse.py  refine.py
streamlit_apps/: app.py  orbit_plot.py  predictor.py  tle_parser.py
