[project]
name = "kshatra"
version = "0.1.0"
description = ""
authors = [
    {name = "Vijay Patil",email = "vijaypatil03528@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "xgboost (>=3.1.1,<4.0.0)",
    "sgp4 (>=2.25,<3.0)",
    "astropy (>=7.1.1,<8.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "numba (>=0.62.1,<0.63.0)",
    "fastapi (>=0.121.1,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "rich (>=14.2.0,<15.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pytest (>=9.0.0,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "streamlit (>=1.51.0,<2.0.0)",
    "plotly (>=6.5.0,<7.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.4,<0.15.0)",
    "black (>=25.11.0,<26.0.0)",
    "pre-commit (>=4.4.0,<5.0.0)"
]

[tool.poetry.dependencies]
lightgbm = {source = "pypi"}
